@startuml

class User {
  -dni : String
  -name : String
  -lastname : String
  -birthday : LocalDate
  -phoneNumber : String
  -email : String
  -password : String
}

class Owner {
}

class Tenant {
  -studentLicense : String
}

User <|-- Owner
User <|-- Tenant

class Property {
  -address : String
  -ownerDni : String
  -status : String
  -surface : double
}

class Room {
  -roomNumber : int
  -propertyAddress : String
  -type : String
  -surface : double
  -status : String
  -pricePerMonth : double
}

class Contract {
  -signatureDate : LocalDate
  -tenantDni : String
  -roomNumber : int
  -propertyAddress : String
  -pricePerMonth : double
  -startingDate : LocalDate
  -endingDate : LocalDate
  -status : String
}

class Report {
  -reportDate : LocalDate
  -userDni : String
  -roomNumber : int
  -propertyAddress : String
  -issue : String
  -details : String
  -status : String
}

class Furniture {
  -furnitureNumber : int
  -propertyAddress : String
  -roomNumber : int
  -name : String
  -category : int
  -quantity : int
}

class Furniture_category {
  -categoryId : int
  -categoryName : String
}

' Relaciones (basadas en constructores)
Property --> Owner : ownerDni
Room --> Property : propertyAddress
Contract --> Tenant : tenantDni
Contract --> Room : roomNumber
Contract --> Property : propertyAddress
Report --> User : userDni
Report --> Room : roomNumber
Report --> Property : propertyAddress
Furniture --> Property : propertyAddress
Furniture --> Room : roomNumber
Furniture --> Furniture_category : category

@enduml